@@ -1,38 +1,35 @@
 package stirling.software.SPDF.config;
 
-import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.context.annotation.DependsOn;
 import org.springframework.stereotype.Service;
 
 import lombok.extern.slf4j.Slf4j;
+
 import stirling.software.SPDF.model.ApplicationProperties;
 
 @Service
 @Slf4j
-@DependsOn({"bookAndHtmlFormatsInstalled"})
 public class EndpointConfiguration {
 
     private static final String REMOVE_BLANKS = "remove-blanks";
     private final ApplicationProperties applicationProperties;
     private Map<String, Boolean> endpointStatuses = new ConcurrentHashMap<>();
     private Map<String, Set<String>> endpointGroups = new ConcurrentHashMap<>();
-    private boolean bookAndHtmlFormatsInstalled;
+    private final boolean runningProOrHigher;
 
     @Autowired
     public EndpointConfiguration(
             ApplicationProperties applicationProperties,
-            @Qualifier("bookAndHtmlFormatsInstalled") boolean bookAndHtmlFormatsInstalled) {
+            @Qualifier("runningProOrHigher") boolean runningProOrHigher) {
         this.applicationProperties = applicationProperties;
-        this.bookAndHtmlFormatsInstalled = bookAndHtmlFormatsInstalled;
+        this.runningProOrHigher = runningProOrHigher;
         init();
         processEnvironmentConfigs();
     }
@@ -53,6 +50,22 @@ public class EndpointConfiguration {
             endpoint = endpoint.substring(1);
         }
         return endpointStatuses.getOrDefault(endpoint, true);
+    }
+
+    public boolean isGroupEnabled(String group) {
+        Set<String> endpoints = endpointGroups.get(group);
+        if (endpoints == null || endpoints.isEmpty()) {
+            log.debug("Group '{}' does not exist or has no endpoints", group);
+            return false;
+        }
+
+        for (String endpoint : endpoints) {
+            if (!isEndpointEnabled(endpoint)) {
+                return false;
+            }
+        }
+
+        return true;
     }
 
     public void addEndpointToGroup(String group, String endpoint) {
@@ -84,7 +97,7 @@ public class EndpointConfiguration {
                         // is false)
                         .map(Map.Entry::getKey)
                         .sorted()
-                        .collect(Collectors.toList());
+                        .toList();
 
         if (!disabledList.isEmpty()) {
             log.info(
@@ -171,13 +184,7 @@ public class EndpointConfiguration {
         addEndpointToGroup("CLI", "ocr-pdf");
         addEndpointToGroup("CLI", "html-to-pdf");
         addEndpointToGroup("CLI", "url-to-pdf");
-        addEndpointToGroup("CLI", "book-to-pdf");
-        addEndpointToGroup("CLI", "pdf-to-book");
         addEndpointToGroup("CLI", "pdf-to-rtf");
-
-        // Calibre
-        addEndpointToGroup("Calibre", "book-to-pdf");
-        addEndpointToGroup("Calibre", "pdf-to-book");
 
         // python
         addEndpointToGroup("Python", "extract-image-scans");
@@ -189,20 +196,16 @@ public class EndpointConfiguration {
         addEndpointToGroup("OpenCV", "extract-image-scans");
 
         // LibreOffice
-        addEndpointToGroup("qpdf", "repair");
         addEndpointToGroup("LibreOffice", "file-to-pdf");
         addEndpointToGroup("LibreOffice", "pdf-to-word");
         addEndpointToGroup("LibreOffice", "pdf-to-presentation");
         addEndpointToGroup("LibreOffice", "pdf-to-rtf");
         addEndpointToGroup("LibreOffice", "pdf-to-html");
         addEndpointToGroup("LibreOffice", "pdf-to-xml");
+        addEndpointToGroup("LibreOffice", "pdf-to-pdfa");
 
-        // Unoconv
-        addEndpointToGroup("Unoconv", "file-to-pdf");
-
-        // qpdf
-        addEndpointToGroup("qpdf", "compress-pdf");
-        addEndpointToGroup("qpdf", "pdf-to-pdfa");
+        // Unoconvert
+        addEndpointToGroup("Unoconvert", "file-to-pdf");
 
         addEndpointToGroup("tesseract", "ocr-pdf");
 
@@ -253,8 +256,6 @@ public class EndpointConfiguration {
         addEndpointToGroup("Javascript", "adjust-contrast");
 
         // qpdf dependent endpoints
-        addEndpointToGroup("qpdf", "compress-pdf");
-        addEndpointToGroup("qpdf", "pdf-to-pdfa");
         addEndpointToGroup("qpdf", "repair");
 
         // Weasyprint dependent endpoints
@@ -272,12 +273,6 @@ public class EndpointConfiguration {
             List<String> endpointsToRemove = applicationProperties.getEndpoints().getToRemove();
             List<String> groupsToRemove = applicationProperties.getEndpoints().getGroupsToRemove();
 
-            if (!bookAndHtmlFormatsInstalled) {
-                if (groupsToRemove == null) {
-                    groupsToRemove = new ArrayList<>();
-                }
-                groupsToRemove.add("Calibre");
-            }
             if (endpointsToRemove != null) {
                 for (String endpoint : endpointsToRemove) {
                     disableEndpoint(endpoint.trim());
@@ -289,6 +284,13 @@ public class EndpointConfiguration {
                     disableGroup(group.trim());
                 }
             }
+        }
+        if (!runningProOrHigher) {
+            disableGroup("enterprise");
+        }
+
+        if (!applicationProperties.getSystem().getEnableUrlToPDF()) {
+            disableEndpoint("url-to-pdf");
         }
     }
 
