@@ -3,7 +3,6 @@ package stirling.software.SPDF.config.security;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
@@ -21,12 +20,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import lombok.extern.slf4j.Slf4j;
+
 import stirling.software.SPDF.config.interfaces.DatabaseInterface;
 import stirling.software.SPDF.config.security.saml2.CustomSaml2AuthenticatedPrincipal;
 import stirling.software.SPDF.config.security.session.SessionPersistentRegistry;
 import stirling.software.SPDF.controller.api.pipeline.UserServiceInterface;
 import stirling.software.SPDF.model.*;
-import stirling.software.SPDF.model.provider.UnsupportedProviderException;
+import stirling.software.SPDF.model.exception.UnsupportedProviderException;
 import stirling.software.SPDF.repository.AuthorityRepository;
 import stirling.software.SPDF.repository.UserRepository;
 
@@ -77,20 +77,18 @@ public class UserService implements UserServiceInterface {
     }
 
     // Handle OAUTH2 login and user auto creation.
-    public boolean processSSOPostLogin(String username, boolean autoCreateUser)
+    public void processSSOPostLogin(String username, boolean autoCreateUser)
             throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
-            return false;
+            return;
         }
         Optional<User> existingUser = findByUsernameIgnoreCase(username);
         if (existingUser.isPresent()) {
-            return true;
+            return;
         }
         if (autoCreateUser) {
             saveUser(username, AuthenticationType.SSO);
-            return true;
         }
-        return false;
     }
 
     public Authentication getAuthentication(String apiKey) {
@@ -109,7 +107,7 @@ public class UserService implements UserServiceInterface {
         // Convert each Authority object into a SimpleGrantedAuthority object.
         return user.getAuthorities().stream()
                 .map((Authority authority) -> new SimpleGrantedAuthority(authority.getAuthority()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String generateApiKey() {
@@ -122,12 +120,14 @@ public class UserService implements UserServiceInterface {
     }
 
     public User addApiKeyToUser(String username) {
-        Optional<User> user = findByUsernameIgnoreCase(username);
-        if (user.isPresent()) {
-            user.get().setApiKey(generateApiKey());
-            return userRepository.save(user.get());
+        Optional<User> userOpt = findByUsernameIgnoreCase(username);
+        User user = saveUser(userOpt, generateApiKey());
+        try {
+            databaseService.exportDatabase();
+        } catch (SQLException | UnsupportedProviderException e) {
+            log.error("Error exporting database after adding API key to user", e);
         }
-        throw new UsernameNotFoundException("User not found");
+        return user;
     }
 
     public User refreshApiKeyForUser(String username) {
@@ -139,6 +139,9 @@ public class UserService implements UserServiceInterface {
         User user =
                 findByUsernameIgnoreCase(username)
                         .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        if (user.getApiKey() == null || user.getApiKey().length() == 0) {
+            user = addApiKeyToUser(username);
+        }
         return user.getApiKey();
     }
 
@@ -169,6 +172,14 @@ public class UserService implements UserServiceInterface {
         saveUser(username, authenticationType, Role.USER.getRoleId());
     }
 
+    private User saveUser(Optional<User> user, String apiKey) {
+        if (user.isPresent()) {
+            user.get().setApiKey(apiKey);
+            return userRepository.save(user.get());
+        }
+        throw new UsernameNotFoundException("User not found");
+    }
+
     public void saveUser(String username, AuthenticationType authenticationType, String role)
             throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         if (!isUsernameValid(username)) {
@@ -194,6 +205,7 @@ public class UserService implements UserServiceInterface {
         user.setPassword(passwordEncoder.encode(password));
         user.setEnabled(true);
         user.setAuthenticationType(AuthenticationType.WEB);
+        user.addAuthority(new Authority(Role.USER.getRoleId(), user));
         userRepository.save(user);
         databaseService.exportDatabase();
     }
@@ -217,6 +229,22 @@ public class UserService implements UserServiceInterface {
     public void saveUser(String username, String password, String role)
             throws IllegalArgumentException, SQLException, UnsupportedProviderException {
         saveUser(username, password, role, false);
+    }
+
+    public void saveUser(String username, String password, boolean firstLogin, boolean enabled)
+            throws IllegalArgumentException, SQLException, UnsupportedProviderException {
+        if (!isUsernameValid(username)) {
+            throw new IllegalArgumentException(getInvalidUsernameMessage());
+        }
+        User user = new User();
+        user.setUsername(username);
+        user.setPassword(passwordEncoder.encode(password));
+        user.addAuthority(new Authority(Role.USER.getRoleId(), user));
+        user.setEnabled(enabled);
+        user.setAuthenticationType(AuthenticationType.WEB);
+        user.setFirstLogin(firstLogin);
+        userRepository.save(user);
+        databaseService.exportDatabase();
     }
 
     public void deleteUser(String username) {
@@ -341,6 +369,7 @@ public class UserService implements UserServiceInterface {
 
         List<String> notAllowedUserList = new ArrayList<>();
         notAllowedUserList.add("ALL_USERS".toLowerCase());
+        notAllowedUserList.add("anonymoususer");
         boolean notAllowedUser = notAllowedUserList.contains(username.toLowerCase());
         return (isValidSimpleUsername || isValidEmail) && !notAllowedUser;
     }
@@ -369,21 +398,18 @@ public class UserService implements UserServiceInterface {
 
     public void invalidateUserSessions(String username) {
         String usernameP = "";
+
         for (Object principal : sessionRegistry.getAllPrincipals()) {
             for (SessionInformation sessionsInformation :
                     sessionRegistry.getAllSessions(principal, false)) {
-                if (principal instanceof UserDetails) {
-                    UserDetails userDetails = (UserDetails) principal;
-                    usernameP = userDetails.getUsername();
-                } else if (principal instanceof OAuth2User) {
-                    OAuth2User oAuth2User = (OAuth2User) principal;
+                if (principal instanceof UserDetails detailsUser) {
+                    usernameP = detailsUser.getUsername();
+                } else if (principal instanceof OAuth2User oAuth2User) {
                     usernameP = oAuth2User.getName();
-                } else if (principal instanceof CustomSaml2AuthenticatedPrincipal) {
-                    CustomSaml2AuthenticatedPrincipal saml2User =
-                            (CustomSaml2AuthenticatedPrincipal) principal;
-                    usernameP = saml2User.getName();
-                } else if (principal instanceof String) {
-                    usernameP = (String) principal;
+                } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
+                    usernameP = saml2User.name();
+                } else if (principal instanceof String stringUser) {
+                    usernameP = stringUser;
                 }
                 if (usernameP.equalsIgnoreCase(username)) {
                     sessionRegistry.expireSession(sessionsInformation.getSessionId());
@@ -394,49 +420,56 @@ public class UserService implements UserServiceInterface {
 
     public String getCurrentUsername() {
         Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        if (principal instanceof UserDetails) {
-            return ((UserDetails) principal).getUsername();
-        } else if (principal instanceof OAuth2User) {
-            return ((OAuth2User) principal)
-                    .getAttribute(
-                            applicationProperties.getSecurity().getOauth2().getUseAsUsername());
-        } else if (principal instanceof CustomSaml2AuthenticatedPrincipal) {
-            return ((CustomSaml2AuthenticatedPrincipal) principal).getName();
-        } else if (principal instanceof String) {
-            return (String) principal;
-        } else {
-            return principal.toString();
+
+        if (principal instanceof UserDetails detailsUser) {
+            return detailsUser.getUsername();
+        } else if (principal instanceof OAuth2User oAuth2User) {
+            return oAuth2User.getAttribute(
+                    applicationProperties.getSecurity().getOauth2().getUseAsUsername());
+        } else if (principal instanceof CustomSaml2AuthenticatedPrincipal saml2User) {
+            return saml2User.name();
+        } else if (principal instanceof String stringUser) {
+            return stringUser;
         }
+        return null;
     }
 
     @Transactional
-    public void syncCustomApiUser(String customApiKey)
-            throws SQLException, UnsupportedProviderException {
-        if (customApiKey == null || customApiKey.trim().length() == 0) {
+    public void syncCustomApiUser(String customApiKey) {
+        if (customApiKey == null || customApiKey.trim().isBlank()) {
             return;
         }
+
         String username = "CUSTOM_API_USER";
         Optional<User> existingUser = findByUsernameIgnoreCase(username);
-        if (!existingUser.isPresent()) {
-            // Create new user with API role
-            User user = new User();
-            user.setUsername(username);
-            user.setPassword(UUID.randomUUID().toString());
-            user.setEnabled(true);
-            user.setFirstLogin(false);
-            user.setAuthenticationType(AuthenticationType.WEB);
-            user.setApiKey(customApiKey);
-            user.addAuthority(new Authority(Role.INTERNAL_API_USER.getRoleId(), user));
-            userRepository.save(user);
+
+        existingUser.ifPresentOrElse(
+                user -> {
+                    // Update API key if it has changed
+                    User updatedUser = existingUser.get();
+
+                    if (!customApiKey.equals(updatedUser.getApiKey())) {
+                        updatedUser.setApiKey(customApiKey);
+                        userRepository.save(updatedUser);
+                    }
+                },
+                () -> {
+                    // Create new user with API role
+                    User user = new User();
+                    user.setUsername(username);
+                    user.setPassword(UUID.randomUUID().toString());
+                    user.setEnabled(true);
+                    user.setFirstLogin(false);
+                    user.setAuthenticationType(AuthenticationType.WEB);
+                    user.setApiKey(customApiKey);
+                    user.addAuthority(new Authority(Role.INTERNAL_API_USER.getRoleId(), user));
+                    userRepository.save(user);
+                });
+
+        try {
             databaseService.exportDatabase();
-        } else {
-            // Update API key if it has changed
-            User user = existingUser.get();
-            if (!customApiKey.equals(user.getApiKey())) {
-                user.setApiKey(customApiKey);
-                userRepository.save(user);
-                databaseService.exportDatabase();
-            }
+        } catch (SQLException | UnsupportedProviderException e) {
+            log.error("Error exporting database after synchronising custom API user", e);
         }
     }
 
