@@ -11,7 +11,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -29,7 +28,9 @@ import io.github.pixee.security.Filenames;
 import io.github.pixee.security.ZipSecurity;
 
 import jakarta.servlet.ServletContext;
+
 import lombok.extern.slf4j.Slf4j;
+
 import stirling.software.SPDF.SPDFApplication;
 import stirling.software.SPDF.model.PipelineConfig;
 import stirling.software.SPDF.model.PipelineOperation;
@@ -116,9 +117,8 @@ public class PipelineProcessor {
                             MultiValueMap<String, Object> body = new LinkedMultiValueMap<>();
                             body.add("fileInput", file);
                             for (Entry<String, Object> entry : parameters.entrySet()) {
-                                if (entry.getValue() instanceof List) {
-                                    List<?> list = (List<?>) entry.getValue();
-                                    for (Object item : list) {
+                                if (entry.getValue() instanceof List<?> entryList) {
+                                    for (Object item : entryList) {
                                         body.add(entry.getKey(), item);
                                     }
                                 } else {
@@ -137,7 +137,7 @@ public class PipelineProcessor {
                                 log.info("Skipping file due to filtering {}", operation);
                                 continue;
                             }
-                            if (!response.getStatusCode().equals(HttpStatus.OK)) {
+                            if (!HttpStatus.OK.equals(response.getStatusCode())) {
                                 logPrintStream.println("Error: " + response.getBody());
                                 hasErrors = true;
                                 continue;
@@ -167,7 +167,7 @@ public class PipelineProcessor {
                                             file ->
                                                     finalinputFileTypes.stream()
                                                             .anyMatch(file.getFilename()::endsWith))
-                                    .collect(Collectors.toList());
+                                    .toList();
                 }
                 // Check if there are matching files
                 if (!matchingFiles.isEmpty()) {
@@ -178,9 +178,8 @@ public class PipelineProcessor {
                         body.add("fileInput", file);
                     }
                     for (Entry<String, Object> entry : parameters.entrySet()) {
-                        if (entry.getValue() instanceof List) {
-                            List<?> list = (List<?>) entry.getValue();
-                            for (Object item : list) {
+                        if (entry.getValue() instanceof List<?> entryList) {
+                            for (Object item : entryList) {
                                 body.add(entry.getKey(), item);
                             }
                         } else {
@@ -189,7 +188,7 @@ public class PipelineProcessor {
                     }
                     ResponseEntity<byte[]> response = sendWebRequest(url, body);
                     // Handle the response
-                    if (response.getStatusCode().equals(HttpStatus.OK)) {
+                    if (HttpStatus.OK.equals(response.getStatusCode())) {
                         processOutputFiles(operation, response, newOutputFiles);
                     } else {
                         // Log error if the response status is not OK
