@@ -7,13 +7,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
-import org.springframework.core.io.support.ResourcePatternUtils;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -25,10 +23,13 @@ import io.swagger.v3.oas.annotations.Hidden;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
 import lombok.extern.slf4j.Slf4j;
+
 import stirling.software.SPDF.config.InstallationPathConfig;
+import stirling.software.SPDF.config.RuntimePathConfig;
 import stirling.software.SPDF.controller.api.pipeline.UserServiceInterface;
 import stirling.software.SPDF.model.SignatureFile;
 import stirling.software.SPDF.service.SignatureService;
+import stirling.software.SPDF.utils.GeneralUtils;
 
 @Controller
 @Tag(name = "General", description = "General APIs")
@@ -38,14 +39,17 @@ public class GeneralWebController {
     private final SignatureService signatureService;
     private final UserServiceInterface userService;
     private final ResourceLoader resourceLoader;
+    private final RuntimePathConfig runtimePathConfig;
 
     public GeneralWebController(
             SignatureService signatureService,
             @Autowired(required = false) UserServiceInterface userService,
-            ResourceLoader resourceLoader) {
+            ResourceLoader resourceLoader,
+            RuntimePathConfig runtimePathConfig) {
         this.signatureService = signatureService;
         this.userService = userService;
         this.resourceLoader = resourceLoader;
+        this.runtimePathConfig = runtimePathConfig;
     }
 
     @GetMapping("/pipeline")
@@ -54,15 +58,13 @@ public class GeneralWebController {
         model.addAttribute("currentPage", "pipeline");
         List<String> pipelineConfigs = new ArrayList<>();
         List<Map<String, String>> pipelineConfigsWithNames = new ArrayList<>();
-        if (new File(InstallationPathConfig.getPipelineDefaultWebUIConfigsDir()).exists()) {
+        if (new File(runtimePathConfig.getPipelineDefaultWebUiConfigs()).exists()) {
             try (Stream<Path> paths =
-                    Files.walk(
-                            Paths.get(
-                                    InstallationPathConfig.getPipelineDefaultWebUIConfigsDir()))) {
+                    Files.walk(Paths.get(runtimePathConfig.getPipelineDefaultWebUiConfigs()))) {
                 List<Path> jsonFiles =
                         paths.filter(Files::isRegularFile)
                                 .filter(p -> p.toString().endsWith(".json"))
-                                .collect(Collectors.toList());
+                                .toList();
                 for (Path jsonFile : jsonFiles) {
                     String content = Files.readString(jsonFile, StandardCharsets.UTF_8);
                     pipelineConfigs.add(content);
@@ -227,15 +229,18 @@ public class GeneralWebController {
         // Extract font names from external directory
         fontNames.addAll(
                 getFontNamesFromLocation(
-                        "file:" + InstallationPathConfig.getStaticPath() + "fonts/*"));
+                        "file:"
+                                + InstallationPathConfig.getStaticPath()
+                                + "fonts"
+                                + File.separator
+                                + "*"));
         return fontNames;
     }
 
     private List<FontResource> getFontNamesFromLocation(String locationPattern) {
         try {
             Resource[] resources =
-                    ResourcePatternUtils.getResourcePatternResolver(resourceLoader)
-                            .getResources(locationPattern);
+                    GeneralUtils.getResourcesFromLocationPattern(locationPattern, resourceLoader);
             return Arrays.stream(resources)
                     .map(
                             resource -> {
@@ -255,7 +260,7 @@ public class GeneralWebController {
                                 }
                             })
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             throw new RuntimeException("Failed to read font directory from " + locationPattern, e);
         }
